...
                                                        <rect key="frame" x="16" y="67" width="334" height="1"/>
                                                        <color key="backgroundColor" red="0.83921568629999999" green="0.83921568629999999" blue="0.83921568629999999" alpha="1" colorSpace="calibratedRGB"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="1" id="j4x-Mq-N1Z"/>
                                                        </constraints>
                                                    </view>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OI6-Cq-Ipc">
                                                        <rect key="frame" x="54" y="17" width="296" height="34"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                        <connections>
                                                            <outlet property="delegate" destination="tx3-zX-Faz" id="KZ0-24-oAd"/>
                                                        </connections>
...
                                                        <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" secondItem="Oz5-NH-x9v" secondAttribute="height" multiplier="1:1" id="67R-nF-tw1"/>
                                                            <constraint firstAttribute="height" constant="24" id="Nhl-hb-FeP"/>
                                                        </constraints>
                                                    </imageView>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n13-jh-3W8">
                                                        <rect key="frame" x="54" y="17" width="296" height="34"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                        <connections>
                                                            <outlet property="delegate" destination="tx3-zX-Faz" id="Rwc-9O-aDa"/>
                                                        </connections>
...
                                                </constraints>
                                            </view>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YbX-fp-sb2">
                                                <rect key="frame" x="40" y="368" width="78" height="38"/>
                                                <color key="backgroundColor" red="0.25098039220000001" green="0.78823529410000004" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
                                                <inset key="contentEdgeInsets" minX="20" minY="10" maxX="20" maxY="10"/>
                                                <state key="normal" title="Login">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="6"/>
                                                    </userDefinedRuntimeAttribute>
...
